# pybrood

./: .gitignore  DEVELOPMENT.md  LICENSE.md  README.md  SConstruct  autogen.py  build.bat  bwapi.cpp  cdeclparser.py  cdumper.py  example.py  make.sh  pybrood.vcxproj  pyproject.toml  setup.cfg  setup.py  singletons.py  todo.txt  typereplacer.py  weakref.jinja2  weakrefs.py
docs/: bullet.rst  bulletset.rst  bullettype.rst  client.rst  color.rst  conf.py  damagetype.rst  error.rst  explosiontype.rst  force.rst  forceset.rst  game.rst  gametype.rst  index.rst  order.rst  player.rst  playerset.rst  playertype.rst  race.rst  region.rst  regionset.rst  techtype.rst  unit.rst  unitcommandtype.rst  unitset.rst  unitsizetype.rst  unittype.rst  upgradetype.rst  weapontype.rst
example/: connector.py
generator/: __main__.py  additional.py  bwapi_classes.py  cdeclparser.py  cdumper.py  classenums.py  classes.py  common.py  config.py  direct_classes.py  docgen.py  proxy_classes.py  proxy_replacements.py  pureenums.py  pybind_dumper.py  singletons.py  skel.py  typemap.yaml  typereplacer.py  typereplacer2.py  utils.py  weakrefs.py
generator/parser/: __init__.py  cdeclparser.py  classes.py  objenums.py  pureenums.py
generator/templates/: class.jinja2  classenum.jinja2  common_h.jinja2  direct_class.jinja2  docclass.jinja2  docindex.jinja2  game.jinja2  objenum.jinja2  proxy_body.jinja2  proxy_header.jinja2  pureenum.jinja2  pybrood_cpp.jinja2  rstconf.jinja2  vcproj.jinja2
generator/templates/weakref/: h.jinja2  (+2 more)
pybinding/: client.cpp  common.cpp  force.cpp  game.cpp  player.cpp
pybrood/: __init__.py  abc.py
(+2 files in other folders)
