[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pybrood"
author = "Vitalik Verhovodov"
author-email = "knifeslaughter@gmail.com"
home-page = "https://github.com/neumond/pybrood"
keywords = "bwapi starcraft broodwar ai binding"
requires-python = ">=3.5,<4"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Topic :: Games/Entertainment",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 7",
]
description-file = "README.md"
