[build-system]
requires = ["pytoml>=0.1", "import_scons"]
build-backend = "enscons.api"

[tool.enscons]
name = "pybrood"
version = "0.9.3"
author = "Vitalik Verhovodov"
author_email = "knifeslaughter@gmail.com"
license="MIT"
description = "Broodwar API binding"
description_file = "README.md"
url = "https://github.com/neumond/pybrood"
keywords = ["bwapi", "starcraft", "broodwar", "ai", "binding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Topic :: Games/Entertainment",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 7",
]
